--- a/web-client/package.json
+++ b/web-client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
+    "react-virtualized": "^9.16.1",
     "reactstrap": "^5.0.0-alpha.4"
   },
   "scripts": {
