Just decided that I'm goign to go with recharts to to the graphing.

--- a/web-client/package.json
+++ b/web-client/package.json
@@ -6,9 +6,11 @@
     "bootstrap": "^4.0.0-beta.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-easy-chart": "^1.0.0",
     "react-scripts": "1.0.17",
     "react-virtualized": "^9.16.1",
-    "reactstrap": "^5.0.0-alpha.4"
+    "reactstrap": "^5.0.0-alpha.4",
+    "recharts": "^1.0.0-beta.9"
   },
   "scripts": {
     "start": "react-scripts start",
