Moved Chart.js over to shared

--- a/shared/client/.babelrc
+++ b/shared/client/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["env"],
-  "plugins": ["transform-react-jsx"]
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-react-jsx"
+  ]
 }
