--- a/local/client/.gitignore
+++ b/local/client/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
 !/node_modules/streamlet-shared
+/node_modules/*/
 
 # testing
 /coverage
