Going to debug why the delta list is not accessible from within webClient.js

--- a/shared/Makefile
+++ b/shared/Makefile
@@ -66,5 +66,6 @@ $(PROTOBUF_BUNDLE_PYTHON): $(PROTOBUF_SRC_FILES)
 # Javascript protobuf implementation uses pbjs.
 $(PROTOBUF_BUNDLE_JS): $(PROTOBUF_SRC_FILES)
 	mkdir -pv $(shell dirname $(PROTOBUF_BUNDLE_JS))
-	# pbjs $(PROTOBUF_SRC_FILES) -t static-module -w es6 > $(PROTOBUF_BUNDLE_JS)
-	pbjs $(PROTOBUF_SRC_FILES) -t static-module > $(PROTOBUF_BUNDLE_JS)
+	#client/node_modules/.bin/pbjs $(PROTOBUF_SRC_FILES) -t static-module > $(PROTOBUF_BUNDLE_JS)
+	client/node_modules/protobufjs/bin/pbjs $(PROTOBUF_SRC_FILES) -t static-module > $(PROTOBUF_BUNDLE_JS)
+	# client/node_modules/.bin/pbjs $(PROTOBUF_SRC_FILES) --js $(PROTOBUF_BUNDLE_JS)
