--- a/shared/client/package.json
+++ b/shared/client/package.json
@@ -22,6 +22,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.1"
+    "babel-preset-env": "^1.6.1",
+    "protobufjs": "^6.8.6"
   }
 }
