add markdown support

--- a/local/client/package.json
+++ b/local/client/package.json
@@ -8,6 +8,7 @@
     "numeral": "^2.0.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-markdown": "^3.3.0",
     "react-scripts": "1.0.17",
     "react-virtualized": "^9.16.1",
     "reactstrap": "^5.0.0-alpha.4",
