--- a/shared/client/package.json
+++ b/shared/client/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "streamlet-shared",
+  "name": "streamlit-shared",
   "version": "1.0.0",
-  "description": "Javascript and CSS modules shared across all streamlet projects.",
+  "description": "Javascript and CSS modules shared across all streamlit projects.",
   "main": "index.js",
   "scripts": {
     "build": "babel src -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "streamlet",
+    "streamlit",
     "shared",
     "log",
     "logs",
