--- a/config.yaml
+++ b/config.yaml
@@ -8,8 +8,6 @@ cloud:
 # Configuration for the local server.
 local:
   throttleSecs: 0.01
-  # server: localhost
-  # port: 9665
 
   # How long to wait for the proxy server to start up.
   waitForProxySecs: 2.0
@@ -22,5 +20,5 @@ proxy:
   # How many seconds the proxy waits for the connection before timing out.
   waitForConnectionSecs: 10.0
 
-  # Whether to use the node development server.
-  useNode: false
+  # # Whether to use the node server or not.
+  # useNode: False
