--- a/local/client/package.json
+++ b/local/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
     "immutable": "^3.8.2",
+    "moment": "^2.21.0",
     "numeral": "^2.0.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
