--- a/local/client/package.json
+++ b/local/client/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.0.0-beta.3",
     "immutable": "^3.8.2",
     "moment": "^2.21.0",
+    "moment-duration-format": "^2.2.2",
     "numeral": "^2.0.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
