--- a/config.yaml
+++ b/config.yaml
@@ -20,5 +20,5 @@ proxy:
   # How many seconds the proxy waits for the connection before timing out.
   waitForConnectionSecs: 10.0
 
-  # # Whether to use the node server or not.
-  # useNode: False
+  # Whether to use the node server or not.
+  # useNode: True
