Got a map working using Leaflet

--- a/local/client/package.json
+++ b/local/client/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
     "immutable": "^3.8.2",
+    "leaflet": "^1.3.1",
     "moment": "^2.21.0",
     "moment-duration-format": "^2.2.2",
     "numeral": "^2.0.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-json-view": "^1.16.1",
+    "react-leaflet": "^1.9.1",
     "react-markdown": "^3.3.0",
     "react-scripts": "1.0.17",
     "react-virtualized": "^9.16.1",
