--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,4 @@
 include README.md
+include streamlit/config/config.yaml
 recursive-include streamlit/protobuf *.proto
+recursive-include streamlit/static *
