--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,6 @@
-pandas
-Pillow
-protobuf
-PyYAML
-aiohttp
-motor
-tzlocal
-docutils
+-r install_requirements.txt
+pytest
+pytest-cov
+flake8
+flake8-docstrings
+testfixtures
