--- a/requirements.txt
+++ b/requirements.txt
@@ -5,22 +5,37 @@
 #    pip-compile --output-file requirements.txt requirements.in
 #
 aiohttp==3.2.0
-async-timeout==3.0.0      # via aiohttp
-attrs==18.1.0             # via aiohttp
-chardet==3.0.4            # via aiohttp
+async-timeout==3.0.0
+attrs==18.1.0
+chardet==3.0.4
+coverage==4.5.1           # via pytest-cov
 docutils==0.14
-idna-ssl==1.0.1           # via aiohttp
-idna==2.6                 # via idna-ssl, yarl
+flake8-docstrings==1.3.0
+flake8-polyfill==1.0.2    # via flake8-docstrings
+flake8==3.5.0
+idna-ssl==1.0.1
+idna==2.6
+mccabe==0.6.1             # via flake8
+more-itertools==4.1.0     # via pytest
 motor==1.2.1
-multidict==4.3.1          # via aiohttp, yarl
-numpy==1.14.3             # via pandas
+multidict==4.3.1
+numpy==1.14.3
 pandas==0.22.0
 pillow==5.1.0
+pluggy==0.6.0             # via pytest
 protobuf==3.5.2.post1
-pymongo==3.6.1            # via motor
-python-dateutil==2.7.2    # via pandas
-pytz==2018.4              # via pandas, tzlocal
+py==1.5.3                 # via pytest
+pycodestyle==2.3.1        # via flake8
+pydocstyle==2.1.1         # via flake8-docstrings
+pyflakes==1.6.0           # via flake8
+pymongo==3.6.1
+pytest-cov==2.5.1
+pytest==3.5.1
+python-dateutil==2.7.2
+pytz==2018.4
 pyyaml==3.12
-six==1.11.0               # via protobuf, python-dateutil
+six==1.11.0
+snowballstemmer==1.2.1    # via pydocstyle
+testfixtures==6.0.2
 tzlocal==1.5.1
-yarl==1.2.4               # via aiohttp
+yarl==1.2.4
