Use jest for testing and code coverage.  It was built specifically for react.
* npm run test
```
(streamlit-refactor) armando@xps13-9360:~/git/streamlet-cloud/frontend/streamlit$ npm run test

> streamlit@0.8.0 test /home/armando/git/streamlet-cloud/frontend/streamlit
> jest

 PASS  src/format.test.js
  ✓ class Duration constructor (2ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        0.592s, estimated 1s
Ran all test suites.
```

* npm run coverage
```
(streamlit-refactor) armando@xps13-9360:~/git/streamlet-cloud/frontend/streamlit$ npm run coverage

> streamlit@0.8.0 coverage /home/armando/git/streamlet-cloud/frontend/streamlit
> jest --coverage

 PASS  src/format.test.js
  ✓ class Duration constructor (2ms)

-----------|----------|----------|----------|----------|-------------------|
File       |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------|----------|----------|----------|----------|-------------------|
All files  |    33.33 |        0 |    33.33 |    33.33 |                   |
 format.js |    33.33 |        0 |    33.33 |    33.33 |... 30,31,32,34,38 |
-----------|----------|----------|----------|----------|-------------------|
Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        0.856s, estimated 1s
Ran all test suites.
```

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ yarn-error.log*
 # Dependency directories
 node_modules/
 
+# Coverage directory used by tools like istanbul
+coverage/
+
 ########################################################################
 # streamlit
 ########################################################################
