--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.21.0",
     "moment-duration-format": "^2.2.2",
     "numeral": "^2.0.6",
+    "protobufjs": "^6.8.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-json-view": "^1.16.1",
