Added scratchpad to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ frontend/src/protobuf.js
 # streamlit
 ########################################################################
 .streamlit/
+scratchpad.py
 lib/streamlit/static
 
 # Data Files
