*DRAFT* don't merge.  GCS upload.
export GOOGLE_APPLICATION_CREDENTIALS='/Users/armando/Downloads/generic-streamlic-access.json'
python -m streamlit help

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,5 +31,6 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2"
-  }
+  },
+  "homepage": "./"
 }
