Got the connection state working properly.

--- a/lib/streamlit/config/config.yaml
+++ b/lib/streamlit/config/config.yaml
@@ -4,7 +4,7 @@
 cloud:
   server: localhost
   port: 8554
-  staticSaveRoot: streamlit-static
+  staticSaveRoot: people/koen/streamlit
 
 # Configuration for the local server.
 local:
