--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "streamlit-client",
-  "version": "0.9.0-koen",
+  "version": "0.10.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
