--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -16,6 +16,7 @@ flake8-docstrings==1.3.0
 flake8-polyfill==1.0.2    # via flake8-docstrings
 flake8==3.5.0
 funcsigs==1.0.2           # via pytest
+future-fstrings==0.4.3
 idna==2.6                 # via requests
 mccabe==0.6.1             # via flake8
 more-itertools==4.2.0     # via pytest
@@ -39,6 +40,7 @@ requests==2.18.4          # via requests-toolbelt, twine
 six==1.11.0
 snowballstemmer==1.2.1    # via pydocstyle
 testfixtures==6.1.0
+tokenize-rt==2.0.1
 tqdm==4.23.4              # via twine
 twine==1.11.0
 tzlocal==1.5.1
