--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -17,6 +17,7 @@ flake8-polyfill==1.0.2    # via flake8-docstrings
 flake8==3.5.0
 funcsigs==1.0.2           # via pytest
 future-fstrings==0.4.3
+future==0.16.0
 idna==2.6                 # via requests
 mccabe==0.6.1             # via flake8
 more-itertools==4.2.0     # via pytest
