--- a/lib/install_requirements.in
+++ b/lib/install_requirements.in
@@ -1,5 +1,6 @@
 pandas
-Pillow
+# 5.1.0 has compatibility issues https://github.com/python-pillow/Pillow/issues/3068
+Pillow!=5.1.0
 protobuf
 PyYAML
 aiohttp
