--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -6,6 +6,7 @@
 #
 atomicwrites==1.1.5       # via pytest
 attrs==18.1.0             # via pytest
+backports-abc==0.5
 boto3==1.7.40
 botocore==1.10.40
 certifi==2018.4.16        # via requests
@@ -19,6 +20,7 @@ flake8-polyfill==1.0.2    # via flake8-docstrings
 flake8==3.5.0
 future-fstrings==0.4.3
 future==0.16.0
+futures==3.1.1
 idna==2.6                 # via requests
 jmespath==0.9.3
 mccabe==0.6.1             # via flake8
@@ -41,9 +43,11 @@ pyyaml==3.12
 requests-toolbelt==0.8.0  # via twine
 requests==2.18.4          # via requests-toolbelt, twine
 s3transfer==0.1.13
+singledispatch==3.4.0.3
 six==1.11.0
 snowballstemmer==1.2.1    # via pydocstyle
 testfixtures==6.1.0
+tokenize-rt==2.0.1
 tornado==5.0.2
 tqdm==4.23.4              # via twine
 twine==1.11.0
