[site] Setup inital layouts for for markdown pages, and add some documentation.

--- a/site/config.toml
+++ b/site/config.toml
@@ -3,3 +3,5 @@ baseURL = "http://streamlit.io/"
 languageCode = "en-us"
 MetaDataFormat = "yaml"
 Paginate = 20
+pygmentsUseClasses=true
+pygmentsCodeFences=true
