--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,12 @@
     "react-markdown": "^3.3.0",
     "react-scripts": "1.0.17",
     "react-virtualized": "^9.16.1",
+    "react-vega-lite": "^1.1.3",
     "reactstrap": "^5.0.0-alpha.4",
-    "recharts": "^1.0.0-beta.10"
+    "recharts": "^1.0.0-beta.10",
+    "vega": "^3.0.0",
+    "vega-lite": "^2.0.0",
+    "vega-tooltip": "^0.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
