--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-json-view": "^1.19.1",
+    "react-keyboard-shortcuts": "^1.1.3",
     "react-leaflet": "^1.9.1",
     "react-markdown": "^3.4.1",
     "react-scripts": "1.0.17",
