--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -32,6 +32,7 @@ pillow==5.0.0
 pkginfo==1.4.2            # via twine
 pluggy==0.6.0             # via pytest
 protobuf==3.6.0
+psutil==5.4.7
 py==1.5.3                 # via pytest
 pycodestyle==2.3.1        # via flake8
 pydocstyle==2.1.1         # via flake8-docstrings
