--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -13,12 +13,15 @@ botocore==1.10.40
 certifi==2018.4.16        # via requests
 chardet==3.0.4            # via requests
 click==6.7
+configparser==3.5.0       # via flake8, pydocstyle
 coverage==4.5.1           # via pytest-cov
 docutils==0.14
 enum-compat==0.0.2
+enum34==1.1.6             # via enum-compat, flake8
 flake8-docstrings==1.3.0
 flake8-polyfill==1.0.2    # via flake8-docstrings
 flake8==3.5.0
+funcsigs==1.0.2           # via pytest
 future-fstrings==0.4.3
 future==0.16.0
 futures==3.1.1
