--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -4,6 +4,7 @@
 #
 #    pip-compile --output-file lib/requirements.txt lib/requirements.in
 #
+argh==0.26.2              # via watchdog
 atomicwrites==1.1.5       # via pytest
 attrs==18.1.0             # via pytest
 backports-abc==0.5
@@ -28,6 +29,7 @@ mccabe==0.6.1             # via flake8
 more-itertools==4.2.0     # via pytest
 numpy==1.14.5
 pandas==0.23.1
+pathtools==0.1.2          # via watchdog
 pillow==5.0.0
 pkginfo==1.4.2            # via twine
 pluggy==0.6.0             # via pytest
@@ -54,3 +56,4 @@ tqdm==4.23.4              # via twine
 twine==1.11.0
 tzlocal==1.5.1
 urllib3==1.22             # via requests
+watchdog==0.9.0
