--- a/docker/streamlit/docker-compose.yml
+++ b/docker/streamlit/docker-compose.yml
@@ -19,3 +19,28 @@ services:
       - IP=192.168.99.100
     ports:
       - 8501:8501
+    entrypoint: /entrypoint.sh
+
+  streamlit-27:
+    image: st/streamlit-27
+    build:
+      context: ../..
+      dockerfile: lib/Dockerfile
+      args:
+        PYTHON_VERSION: 2.7
+
+  streamlit-35:
+    image: st/streamlit-35
+    build:
+      context: ../..
+      dockerfile: lib/Dockerfile
+      args:
+        PYTHON_VERSION: 3.5
+
+  streamlit-36:
+    image: st/streamlit-36
+    build:
+      context: ../..
+      dockerfile: lib/Dockerfile
+      args:
+        PYTHON_VERSION: 3.6
