--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ frontend/src/protobuf.js
 ########################################################################
 .streamlit/
 lib/streamlit/static
-storage/
+./storage/
 
 # Data Files
 **/uber-raw-data-sep14.csv
