--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ frontend/src/protobuf.js
 ########################################################################
 .streamlit/
 lib/streamlit/static
+streamlit-storage
 
 # Data Files
 **/uber-raw-data-sep14.csv
