Create ~ubuntu/sshfs directory remotely. (#250)
still works.
```
ubuntu@ip-10-0-0-11:~$ ls -la
total 2876
drwxr-xr-x 18 ubuntu ubuntu    4096 Jan 16 19:07 .
drwxr-xr-x  3 root   root      4096 Dec  7 22:58 ..
drwxrwxr-x 23 ubuntu ubuntu    4096 Dec 11 09:01 anaconda2
drwxrwxr-x 25 ubuntu ubuntu    4096 Dec 11 10:49 anaconda3
-rw-r--r--  1 ubuntu ubuntu     220 Aug 31  2015 .bash_logout
-rw-rw-r--  1 ubuntu ubuntu    3818 Dec  7 23:01 .bashrc
drwx------  2 ubuntu ubuntu    4096 Jan 16 19:07 .cache
drwxrwxr-x  3 ubuntu ubuntu    4096 Dec 11 12:31 .cmake
drwxrwxr-x  3 ubuntu ubuntu    4096 Dec 11 09:01 .conda
-rw-rw-r--  1 ubuntu ubuntu      53 Dec 11 12:24 .condarc
drwxrwxr-x  3 ubuntu ubuntu    4096 Dec 11 10:20 .config
-rw-rw-r--  1 ubuntu ubuntu    1149 Dec 11 08:59 .dlamirc
drwxrwxr-x  4 ubuntu ubuntu    4096 Dec 11 08:49 .dl_binaries
drwxrwxr-x  8 ubuntu ubuntu    4096 Dec 11 08:57 examples
drwxr-xr-x  3 ubuntu ubuntu    4096 Dec 11 10:50 .jupyter
drwxrwxr-x  2 ubuntu ubuntu    4096 Dec 11 10:13 .keras
drwxrwxr-x  3 ubuntu ubuntu    4096 Dec  7 23:10 .local
-rw-rw-r--  1 ubuntu ubuntu 2839191 Dec  7 23:38 Nvidia_Cloud_EULA.pdf
-rw-r--r--  1 ubuntu ubuntu     694 Dec 11 09:00 .profile
-rw-rw-r--  1 ubuntu ubuntu    3423 Dec 11 08:58 README
drwxrwxr-x  9 ubuntu ubuntu    4096 Dec 11 12:35 src
drwx------  2 ubuntu ubuntu    4096 Jan 16 19:05 .ssh
drwxr-xr-x  2 ubuntu ubuntu    4096 Jan 16 19:05 sshfs
drwxr-xr-x  2 root   root      4096 Jan 16 19:06 .streamlit
-rw-r--r--  1 ubuntu ubuntu       0 Dec  7 23:01 .sudo_as_admin_successful
drwxrwxr-x  5 ubuntu ubuntu    4096 Dec 11 08:57 tutorials
-rw-rw-r--  1 ubuntu ubuntu    1149 Dec 11 08:59 .zshrc
```

--- a/configs/autogen/insight.yaml
+++ b/configs/autogen/insight.yaml
@@ -97,6 +97,7 @@ Resources:
             - "echo -e '#!/bin/sh\necho Streamlit is still installing. Please try\
               \ again in a few minutes.\n' > /usr/local/bin/streamlit \n"
             - "chmod +x /usr/local/bin/streamlit \n"
+            - "install -o ubuntu -g ubuntu -m 755 -d ~ubuntu/sshfs \n"
             - "/home/ubuntu/anaconda3/bin/pip install streamlit \n"
             - "curl -o /usr/local/bin/rmate https://raw.githubusercontent.com/aurora/rmate/master/rmate\
               \ \n"
