Fix permission to streamlit caching works.
```
ubuntu@ip-10-0-0-10:~$ ls -laR .streamlit
.streamlit:
total 12
drwxr-xr-x  2 ubuntu ubuntu 4096 Jan 16 20:18 .
drwxr-xr-x 18 ubuntu ubuntu 4096 Jan 16 20:18 ..
-rw-------  1 ubuntu ubuntu   33 Jan 16 20:18 config.toml
```

--- a/configs/autogen/insight.yaml
+++ b/configs/autogen/insight.yaml
@@ -106,7 +106,8 @@ Resources:
             - "ln -fs /home/ubuntu/anaconda3/bin/streamlit /usr/local/bin/streamlit\
               \ \n"
             - "curl -o /tmp/config.toml http://streamlit.io/cf/config.toml \n"
-            - "install -D -m 755 -o ubuntu -t ~ubuntu/.streamlit /tmp/config.toml\
+            - "install -m 755 -o ubuntu -g ubuntu -d ~ubuntu/.streamlit \n"
+            - "install -m 600 -o ubuntu -g ubuntu -t ~ubuntu/.streamlit /tmp/config.toml\
               \ \n"
     Type: AWS::EC2::Instance
   Ec2InstanceSecurityGroup:
